--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
                             the card's
                             content.</p>
                         <a href="#" id="btn1" class="btn btn-primary">Go somewhere</a>
+                        <p id="colorView1">color: #ffffff</p>
                     </div>
                 </div>
             </div>
@@ -35,6 +36,10 @@
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's
                             content.</p>
+                            <a href="#" id="btn2" class="btn btn-primary">Go somewhere</a>
+                            <p id="colorView2">color: #ffffff</p>
+
+
                     </div>
                 </div>
             </div>
@@ -48,6 +53,8 @@
                             the card's
                             content.</p>
                         <a href="#" id="btn3" class="btn btn-primary">Go somewhere</a>
+                        <p id="colorView3">color: #ffffff</p>
+
                     </div>
                 </div>
             </div>
